maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:38: error: type mismatch;
 found   : Unit
 required: Int
  for (x<- 0 to getMondeLargeur() - 1) {
        ^JediEscaper:49: error: type mismatch;
 found   : Unit
 required: Int
  for (y<- 0 to getMondeHauteur() - 1) {
        ^